# rag-canvus-MedRAX2

./: .env.example  .gitignore  2rexvqa.sh  CITATION_FEATURE.md  README.md  analyze.py  api.py  benchmark_from_csv.sh  benchmarking_script.sh  chestagentbench_script.sh  dispatch_csv_benchmarks.sh  interface.py  main.py  medgemma.sh  medgemma_example.py  medgemma_script.sh  playground.ipynb  pyproject.toml  quickstart.py  rexvqa_medrax.sh  rexvqa_script.sh
MedSAM2/sam2/: sam2_image_predictor.py
MedSAM2/sam2/modeling/: efficienttam_base.py  efficienttam_utils.py  memory_attention.py  memory_encoder.py  sam2_base.py  sam2_utils.py
MedSAM2/sam2/modeling/backbones/: image_encoder.py
MedSAM2/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
benchmarking/: __init__.py  cli.py  evaluation.py  runner.py  system_prompts.txt
benchmarking/benchmarks/: __init__.py  base.py  chest_agent_bench.py  chestagentbench_benchmark.py  mimic_cxr_benchmark.py  rexvqa_benchmark.py
benchmarking/config/: config.yaml
benchmarking/config/benchmark/: chestagentbench.yaml  mimic_cxr.yaml  rexvqa.yaml  rexvqa_medgemma.yaml
benchmarking/config/provider/: google.yaml  medgemma.yaml  medrax.yaml  openai.yaml  openrouter.yaml
benchmarking/config/runner/: default.yaml
benchmarking/data/rexvqa/: download_rexgradient_images.py
benchmarking/eval_sets/: medrax_evals_chestagentbench.csv  medrax_evals_vqa.csv  medrax_test.csv  mimic_cxr_evals.csv
benchmarking/llm_providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  medgemma_provider.py  medrax_provider.py  openai_provider.py  openrouter_provider.py
benchmarking/scripts/: prepare_mimic_cxr_manifest.py  run_from_csv.py
medrax/: paths.py
medrax/agent/: __init__.py  agent.py
medrax/docs/: MedRAX2_system_prompt_v0.txt  MedRAX2_system_prompt_v2.txt  system_prompts.txt
medrax/llava/: conversation.py  mm_utils.py  utils.py
medrax/llava/eval/: eval_multimodal_chat_gpt_score.py  llm.py  model_vqa.py  summarize_gpt_review.py
medrax/llava/model/: builder.py  llava_arch.py
medrax/llava/model/language_model/: llava_mistral.py
medrax/llava/model/multimodal_encoder/: builder.py
medrax/llava/model/multimodal_projector/: builder.py
medrax/llava/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  test_message.py
medrax/models/: __init__.py  model_factory.py
medrax/rag/: __init__.py  rag.py
medrax/rag/docs/: README.md
medrax/rag/vectorDB/: chroma.sqlite3
medrax/tools/: __init__.py  canvus_rag.py  dicom.py  grounding.py  medgemma.py  medgemma_client.py  medsam2.py  python_tool.py  rag.py  report_generation.py  utils.py  web_browser.py  xray_generation.py
medrax/tools/browsing/: __init__.py  duckduckgo.py  web_browser.py
medrax/tools/classification/: __init__.py  arcplus.py  torchxrayvision.py
medrax/tools/segmentation/: __init__.py  medsam2.py  segmentation.py
medrax/tools/vqa/: __init__.py  llava_med.py  xray_vqa.py
medrax/tools/vqa/medgemma/: medgemma.py  medgemma_client.py  medgemma_requirements.txt  medgemma_requirements_standard.txt  medgemma_setup.py
medrax/utils/: __init__.py  citations.py  utils.py
scripts/: pdf_to_hf_dataset.py
web_platform/: backend-prod.sh  start-backend.sh  start-frontend.sh
web_platform/backend/: README.md  requirements.txt
web_platform/backend/app/: config.py  dependencies.py  main.py
web_platform/backend/app/api/: __init__.py  auth.py  chats.py  memory.py  messages.py  patients.py  questions.py  scans.py  system.py  tool_history.py  tool_testing.py  tools.py  tools_sse.py
web_platform/backend/app/database/: __init__.py  base.py  init_db.py  session.py
web_platform/backend/app/models/: __init__.py  chat.py  doctor.py  message.py  patient.py  question.py  scan.py  tool_execution.py
web_platform/backend/app/schemas/: __init__.py  chat.py  doctor.py  memory.py  message.py  patient.py  question.py  scan.py  tool.py
web_platform/backend/app/services/: __init__.py  chat_processor.py  image_registry.py  tool_manager.py  tool_wrapper.py
web_platform/backend/app/utils/: file_utils.py  formatting.py  gpu_placement.py  logging_config.py  security.py  sse.py  tool_registry.py
web_platform/backend/scripts/: export_openapi.py  test_tool.py  test_tools.sh
web_platform/frontend/: .gitignore  README.md  package-lock.json  package.json
web_platform/frontend/app/: globals.css  layout.tsx  page.tsx
web_platform/frontend/app/app/: page.tsx
web_platform/frontend/app/login/: page.tsx
web_platform/frontend/app/register/: page.tsx
web_platform/frontend/components/auth/: ApiSecretGate.tsx  AuthGuard.tsx
web_platform/frontend/components/chat/: ChatInput.tsx  ChatInterface.tsx  Message.tsx  MessageActivity.tsx  SuggestedQuestions.tsx
web_platform/frontend/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
web_platform/frontend/components/scans/: ScanGalleryDrawer.tsx  ScanUploadZone.tsx
web_platform/frontend/components/settings/: ProfileSettings.tsx  QuestionsSettings.tsx  ToolsSettings.tsx
web_platform/frontend/components/sidebar/: ChatListItem.tsx  NewPatientModal.tsx  PatientCard.tsx  RenamePatientModal.tsx
web_platform/frontend/components/tool-outputs/: ToolExecutionTimeline.tsx  ToolOutputsSidebar.tsx  ToolResultCard.tsx
web_platform/frontend/components/tools/: ToolLoadingProgress.tsx
web_platform/frontend/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Drawer.tsx  ImageModal.tsx  Input.tsx  MarkdownRenderer.tsx  Modal.tsx  Spinner.tsx
web_platform/frontend/lib/api/: auth.ts  chats.ts  client.ts  doctors.ts  memory.ts  messages.ts  patients.ts  questions.ts  scans.ts  system.ts  toolHistory.ts  toolManagement.ts  tools.ts
web_platform/frontend/lib/config/: api.ts  app.ts
web_platform/frontend/lib/openapi/: client.ts  transformers.ts
web_platform/frontend/lib/store/: appStore.ts  authStore.ts
web_platform/frontend/lib/types/: api.ts  chat.ts  doctor.ts  index.ts  message.ts  openapi.d.ts  patient.ts  question.ts  scan.ts  tool.ts
web_platform/frontend/lib/utils/: constants.ts  (+5 more)
(+1 files in other folders)
