[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medrax"
version = "0.1.0"
description = "medical reasoning agent for chest x-ray"
authors = [
    {name = "Adibvafa Fallahpour", email = "adibvafa.fallahpour@mail.utoronto.ca"},
]
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.4.0",
    "accelerate==1.8.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "annotated-types==0.7.0",
    "anthropic==0.62.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backoff==1.11.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "bitsandbytes==0.46.1",
    "black==25.1.0",
    "bleach==6.2.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.15",
    "click==8.2.1",
    "cohere==5.15.0",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cryptography==45.0.5",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==3.6.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "diffusers==0.34.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "duckduckgo-search==8.1.1",
    "durationpy==0.10",
    "ecdsa==0.19.1",
    "einops==0.8.1",
    "einops-exts==0.0.4",
    "executing==2.2.0",
    "fastapi==0.115.14",
    "fastavro==1.11.1",
    "fastjsonschema==2.21.1",
    "ffmpy==0.6.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "fonttools==4.58.5",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "gast==0.7.0",
    "gdcm==1.1",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.70.0",
    "gradio==5.35.0",
    "gradio-client==1.10.4",
    "greenlet==3.2.3",
    "groovy==0.1.2",
    "grpcio==1.73.1",
    "grpcio-status==1.73.1",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.34.0",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "iopath==0.1.10",
    "ipykernel==6.29.5",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "keras==3.13.2",
    "kiwisolver==1.4.8",
    "kubernetes==33.1.0",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.18",
    "langchain-chroma==0.2.5",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.6",
    "langchain-openai==0.3.29",
    "langchain-pinecone==0.2.8",
    "langchain-sandbox==0.0.6",
    "langchain-tests==0.3.20",
    "langchain-text-splitters==0.3.9",
    "langchain-xai==0.2.5",
    "langgraph==0.6.4",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.4",
    "latex2mathml==3.78.0",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "lxml==6.0.0",
    "markdown==3.10.2",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.3",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "ml-dtypes==0.5.4",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "namex==0.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.4",
    "notebook-shim==0.2.4",
    "numpy==2.3.1",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "oauthlib==3.3.1",
    "omegaconf==2.3.0",
    "onnxruntime==1.22.0",
    "openai==1.93.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.11.1",
    "opentelemetry-proto==1.11.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "peft==0.16.0",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pinecone==7.3.0",
    "pinecone-client==6.0.0",
    "pinecone-plugin-assistant==1.7.0",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "portalocker==3.2.0",
    "posthog==5.4.0",
    "primp==0.15.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydicom==3.0.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pylibjpeg==2.0.1",
    "pyngrok==7.3.0",
    "pyparsing==3.2.3",
    "pypdf2==3.0.1",
    "pypdfium2==4.30.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pytest==8.4.1",
    "pytest-asyncio==0.26.0",
    "pytest-benchmark==5.1.0",
    "pytest-codspeed==3.2.0",
    "pytest-recording==0.13.4",
    "pytest-socket==0.7.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.3.0",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "ray==2.47.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "rsa==4.9.1",
    "ruff==0.12.2",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "sentencepiece==0.2.0",
    "setuptools==78.1.1",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "simsimd==6.4.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "stringzilla==3.12.5",
    "svgwrite==1.4.3",
    "sympy==1.14.0",
    "syrupy==4.9.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.3.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.6.11",
    "tiktoken==0.9.0",
    "timm==0.9.16",
    "tinycss2==1.4.0",
    "tokenizers==0.21.0",
    "tomlkit==0.13.3",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchxrayvision==1.3.5",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "triton==3.3.1",
    "typer==0.16.0",
    "types-python-dateutil==2.9.0.20250516",
    "types-pyyaml==6.0.12.20250516",
    "types-requests==2.32.4.20250611",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "vcrpy==7.0.0",
    "watchfiles==1.1.0",
    "wavedrom==2.0.3.post3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.5",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medrax*"]
exclude = ["med_env*", "demo*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
